syntax = "proto3";

package keyboard;

service KeyboardService {
    rpc SetKeyboard(SetKeyboardRequest) returns (Empty) {}
    rpc SetInputSource(SetInputSourceRequest) returns (Empty) {}
}

message Empty {}

message KeyboardSettings {
    string layout = 1;
    string variant = 2;
}

message SetKeyboardRequest {
    KeyboardSettings settings = 1;
}

message SetInputSourceRequest {
  KeyboardSettings settings = 1;
}
